# Glucose_logger

./: README.md  main.spec  players.db  pyproject.toml
src/glucose_logger/: __init__.py  main.py
