[project]
name = "glucose-logger"
version = "0.1.0"
description = "Small tool to write glucose and nick with time to sqlite database"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "pyinstaller>=6.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/glucose_logger"]
